WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
177487
cssFloat missing in CSSPropertyDeclaration.prototype
https://bugs.webkit.org/show_bug.cgi?id=177487
Summary
cssFloat missing in CSSPropertyDeclaration.prototype
Rick Byers
Reported
2017-09-26 08:20:54 PDT
'cssFloat' in CSSStyleDeclaration.prototype is true in all engines except WebKit (tested WebKit nightly at
r222497
) Specified here:
https://drafts.csswg.org/cssom/#the-cssstyledeclaration-interface
The property exists in WebKit, it's just completely hidden from enumeration: 'cssFloat' in document.body.style
> true
Object.getOwnPropertyNames(document.body.style).indexOf('cssFloat')
> -1
Object.getOwnPropertyNames(Object.getPrototypeOf(document.body.style)).indexOf('cssFloat')
> -1
Attachments
WIP Patch
(69.87 KB, patch)
2017-09-26 16:14 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
WIP Patch
(72.11 KB, patch)
2017-09-26 16:23 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(14.34 KB, patch)
2017-09-26 19:58 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Rick Byers
Comment 1
2017-09-26 08:23:59 PDT
It's not listed in CSSStyleDeclaration.idl:
https://trac.webkit.org/browser/webkit/trunk/Source/WebCore/css/CSSStyleDeclaration.idl
, but also apparently not added by the custom enumeration code for CSSStyleDeclaration.
Chris Dumez
Comment 2
2017-09-26 16:14:46 PDT
Created
attachment 321885
[details]
WIP Patch
Chris Dumez
Comment 3
2017-09-26 16:23:40 PDT
Created
attachment 321887
[details]
WIP Patch
Chris Dumez
Comment 4
2017-09-26 19:58:10 PDT
Created
attachment 321931
[details]
Patch
WebKit Commit Bot
Comment 5
2017-09-27 10:55:59 PDT
Comment on
attachment 321931
[details]
Patch Clearing flags on attachment: 321931 Committed
r222559
: <
http://trac.webkit.org/changeset/222559
>
WebKit Commit Bot
Comment 6
2017-09-27 10:56:01 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 7
2017-09-27 12:15:28 PDT
<
rdar://problem/34692877
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug