cssFloat missing in CSSPropertyDeclaration.prototype https://bugs.webkit.org/show_bug.cgi?id=177487

Reviewed by Sam Weinig.

LayoutTests/imported/w3c:

Rebaseline WPT now that more checks are passing.

* web-platform-tests/cssom/interfaces-expected.txt:

Source/WebCore:

Add support for cssFloat attribute on CSSPropertyDeclaration, as per:
- https://drafts.csswg.org/cssom/#dom-cssstyledeclaration-cssfloat

Test: fast/css/CSSStyleDeclaration-cssFloat.html

* css/CSSStyleDeclaration.cpp:
(WebCore::CSSStyleDeclaration::cssFloat):
(WebCore::CSSStyleDeclaration::setCssFloat):
* css/CSSStyleDeclaration.h:
* css/CSSStyleDeclaration.idl:

LayoutTests:

Add layout test coverage.

* fast/css/CSSStyleDeclaration-cssFloat-expected.txt: Added.
* fast/css/CSSStyleDeclaration-cssFloat.html: Added.


Canonical link: https://commits.webkit.org/193848@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@222559 268f45cc-cd09-0410-ab3c-d52691b4dbfc